test/valid/58168_incrementor/incrementor.agu
-- Author: 58168, Henrique Costa Vale

let inc(n) : Int -> Int =
    set n = n + 1;
    n

let main(_) : Unit -> Unit =
  print(inc(4))