test/invalid-syntax/58219_invalid_char/invalid_char.agu
-- Author: 58219, Mariana Costa
-- Lexical error: invalid char $

let salary$ : Int = 1000
let bonus : Int = 200
let total : Int = salary$ + bonus

let main : Unit = print(total)